force-app/main/default/objects/Opportunity/fields/Abstrakt_Services_Included__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Services_Included__c</fullName>
    <label>Abstrakt Services Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Website/SEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>