force-app/main/default/objects/Opportunity/fields/Accepted_Salary__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Salary__c</fullName>
    <label>Accepted Salary</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>