force-app/main/default/objects/Opportunity/fields/Account_Owner_Approved_Audit__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Approved_Audit__c</fullName>
    <label>Account Owner Approved Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>