force-app/main/default/objects/Opportunity/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <formula>Contact__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>