force-app/main/default/objects/Opportunity/fields/Active_Proposals_in_Metro__c.field-meta.xml
<CustomField>
    <fullName>Active_Proposals_in_Metro__c</fullName>
    <description>The number of opportunities in proposal stage by industry and metro area</description>
    <inlineHelpText>Updated via opportunity trigger</inlineHelpText>
    <label>Active Proposals in Metro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>