force-app/main/default/objects/Opportunity/fields/Add_Inbound_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Inbound_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Inbound Product</label>
    <type>Checkbox</type>
</CustomField>