force-app/main/default/objects/Opportunity/fields/Add_Outbound_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Outbound_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for the automation off of account pages for referrals</description>
    <label>Add Outbound Product</label>
    <type>Checkbox</type>
</CustomField>