force-app/main/default/objects/Opportunity/fields/Added_to_Revenue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Revenue_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Workato Integration Television</description>
    <label>Added to Revenue Sheet</label>
    <type>Checkbox</type>
</CustomField>