force-app/main/default/objects/Opportunity/fields/Agreement_Change__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Change__c</fullName>
    <description>This information depicts the changes to a prospect&apos;s initial contract and is a merge field used to populate details in the DocuSign Addendum template.</description>
    <inlineHelpText>This gets populated on the proposal from Docusign.</inlineHelpText>
    <label>Change to Exhibit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>