force-app/main/default/objects/Opportunity/fields/All_Influencers_Sold__c.field-meta.xml
<CustomField>
    <fullName>All_Influencers_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Influencers Sold</label>
    <type>Checkbox</type>
</CustomField>