force-app/main/default/objects/Opportunity/fields/Annual_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Revenue__c</fullName>
    <description>Annual Sales Revenue used in Partner Success Form DocuSign Template</description>
    <inlineHelpText>Annual Sales Revenue used in Partner Success Form DocuSign Template</inlineHelpText>
    <label>Annual Sales Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 to $1,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000 to $3,000,000</fullName>
            </value>
            <value>
                <fullName>$3,000,000 to $5,000,000</fullName>
            </value>
            <value>
                <fullName>Above $5,000,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
                <isActive>false</isActive>
                <label>$1,000,000</label>
            </value>
            <value>
                <fullName>$500,000</fullName>
                <isActive>false</isActive>
                <label>$500,000</label>
            </value>
            <value>
                <fullName>Above $1,000,000</fullName>
                <isActive>false</isActive>
                <label>Above $1,000,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>