force-app/main/default/objects/Opportunity/fields/Appointment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Definition__c</fullName>
    <description>This gets populated on the proposal from Docusign.</description>
    <inlineHelpText>This gets populated on the proposal from Docusign.</inlineHelpText>
    <label>Appointment Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>