force-app/main/default/objects/Opportunity/fields/Appointment_Qualifiers_in_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Qualifiers_in_Proposal__c</fullName>
    <inlineHelpText>This is the only way to populate this section of the implementation packet.</inlineHelpText>
    <label>Appointment Qualifiers in Proposal</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>