force-app/main/default/objects/Opportunity/fields/Appointment_Set_By__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Set By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>