force-app/main/default/objects/Opportunity/fields/Appointment_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_Date__c</fullName>
    <description>Date on which the appointment that generated this opportunity was set</description>
    <label>Appointment Set Date</label>
    <type>Date</type>
</CustomField>