force-app/main/default/objects/Opportunity/fields/Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Date__c</fullName>
    <inlineHelpText>The date the appointment was set for.</inlineHelpText>
    <label>Appt Scheduled For Date</label>
    <type>Date</type>
</CustomField>