force-app/main/default/objects/Opportunity/fields/APSM_Email__c.field-meta.xml
<CustomField>
    <fullName>APSM_Email__c</fullName>
    <description>DELETE FIELD *** Formula was &quot;Account.Assistant_Partner_Sales_Manager__r.Email&quot; 
but it was eating up one of the Opps 15 unique object references. Updated it for the time being until we can delete this field ( also we already have a PAM Email field)</description>
    <formula>PAM_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APSM Email</label>
    <type>Text</type>
</CustomField>