force-app/main/default/objects/Opportunity/fields/Ask_for_Business_Today__c.field-meta.xml
<CustomField>
    <fullName>Ask_for_Business_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ask for Business Today</label>
    <type>Checkbox</type>
</CustomField>