force-app/main/default/objects/Opportunity/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <description>Used by Clients in the lightning portals</description>
    <inlineHelpText>Client&apos;s Internal Employee who is in charge of following up on this Opportunity.</inlineHelpText>
    <label>Opportunity Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>