force-app/main/default/objects/Opportunity/fields/Associated_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the won opportunity to its account page.</description>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Associated Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>