force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All KDM&apos;s agree to buy - 30%</inlineHelpText>
    <label>Authority</label>
    <type>Checkbox</type>
</CustomField>