force-app/main/default/objects/Opportunity/fields/Authority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Authority_Notes__c</fullName>
    <label>Authority Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>