force-app/main/default/objects/Opportunity/fields/Ben_Assigns_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Ben_Assigns_Sales_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ben assigns sales leads and it is logged in SalesForce</inlineHelpText>
    <label>Ben Assigns Sales Lead</label>
    <type>Checkbox</type>
</CustomField>