force-app/main/default/objects/Opportunity/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <description>Billing point of contact used to populate Partner Success Form in DocuSign</description>
    <inlineHelpText>Who will be the billing/invoicing point of contact? - For use in DocuSign</inlineHelpText>
    <label>Billing Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>