force-app/main/default/objects/Opportunity/fields/Billing_Contact_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Direct_Phone__c</fullName>
    <description>Billing Contact Direct Phone pushes to the Master Services Agreement in docusign</description>
    <inlineHelpText>This will push to the Master Services Agreement in DocuSign</inlineHelpText>
    <label>Billing Contact Direct Phone</label>
    <type>Phone</type>
</CustomField>