force-app/main/default/objects/Opportunity/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>This will push to the Master Services Agreement in DocuSign</description>
    <inlineHelpText>This will push to the Master Services Agreement in DocuSign</inlineHelpText>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>