force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have budget to buy - 40%</inlineHelpText>
    <label>Budget</label>
    <type>Checkbox</type>
</CustomField>