force-app/main/default/objects/Opportunity/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <label>Budget Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>