force-app/main/default/objects/Opportunity/fields/Build_Contract__c.field-meta.xml
<CustomField>
    <fullName>Build_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build Contract</label>
    <type>Checkbox</type>
</CustomField>