force-app/main/default/objects/Opportunity/fields/Build_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Build_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build Proposal</label>
    <type>Checkbox</type>
</CustomField>