force-app/main/default/objects/Opportunity/fields/Business_Center__c.field-meta.xml
<CustomField>
    <fullName>Business_Center__c</fullName>
    <label>Business Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Northeast -  # 32</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic - # 35</fullName>
            </value>
            <value>
                <fullName>Great Lakes - # 42</fullName>
            </value>
            <value>
                <fullName>Midwest - # 51</fullName>
            </value>
            <value>
                <fullName>Southwest - # 63</fullName>
            </value>
            <value>
                <fullName>Southeast - # 66</fullName>
            </value>
            <value>
                <fullName>West - # 70</fullName>
            </value>
            <value>
                <fullName>California - # 71</fullName>
            </value>
            <value>
                <fullName>Great Plains - # 74</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>