force-app/main/default/objects/Opportunity/fields/Business_Development_Follow_up_Call__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Follow_up_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Development Follow-up Call</label>
    <type>Checkbox</type>
</CustomField>