force-app/main/default/objects/Opportunity/fields/Callback_Date__c.field-meta.xml
<CustomField>
    <fullName>Callback_Date__c</fullName>
    <inlineHelpText>Sales - this is the pitch date</inlineHelpText>
    <label>Callback Date</label>
    <type>Date</type>
</CustomField>