force-app/main/default/objects/Opportunity/fields/Calls_After_Most_Recent_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Calls_After_Most_Recent_Pitch__c</fullName>
    <label>Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>