force-app/main/default/objects/Opportunity/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <formula>Client_Account__r.Cancel_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>