force-app/main/default/objects/Opportunity/fields/Candidate_Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Discovery_Date__c</fullName>
    <description>Date the Talent Solutions Applicant Opportunity was created or when we actively started perusing the candidate
MCarter (case chatter 00070676 - regarding the field being the same as created date): &quot;I&apos;d like to still add those two fields -- we had a few clients sign but then ask us to delay the start day by a few weeks. This would ensure we always have the right date.&quot;</description>
    <inlineHelpText>Date the Talent Solutions Applicant Opportunity was created or when we actively started perusing the candidate</inlineHelpText>
    <label>Candidate Discovery Date</label>
    <type>Date</type>
</CustomField>