force-app/main/default/objects/Opportunity/fields/Candidate_s_First_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_s_First_Interview_Date__c</fullName>
    <label>Candidate&apos;s First Interview Date</label>
    <type>Date</type>
</CustomField>