force-app/main/default/objects/Opportunity/fields/Candidate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Start_Date__c</fullName>
    <description>The anticipated start date of the candidate after accepting the client&apos;s job offer.</description>
    <label>Candidate Start Date</label>
    <type>Date</type>
</CustomField>