force-app/main/default/objects/Opportunity/fields/City_Region__c.field-meta.xml
<CustomField>
    <fullName>City_Region__c</fullName>
    <label>City/Region</label>
    <length>60</length>
    <type>Text</type>
</CustomField>