force-app/main/default/objects/Opportunity/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is used to identify track an account&apos;s referrals and upsells.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Client Account)</relationshipLabel>
    <relationshipName>Client_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>