force-app/main/default/objects/Opportunity/fields/Client_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Revenue_Type__c,&apos;Monthly Reoccurring&apos;), Amount*12, Amount
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>