force-app/main/default/objects/Opportunity/fields/Client_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Follow_Up_Date__c</fullName>
    <description>This is used on the portals and to remind the clients to follow up with prospects.</description>
    <label>Client Follow Up Date</label>
    <type>Date</type>
</CustomField>