force-app/main/default/objects/Opportunity/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <description>This field allows clients to leave notes on their opportunities</description>
    <label>Client Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>