force-app/main/default/objects/Opportunity/fields/Client_Setup_Sheet_Completed__c.field-meta.xml
<CustomField>
    <fullName>Client_Setup_Sheet_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Setup Sheet Completed</label>
    <type>Checkbox</type>
</CustomField>