force-app/main/default/objects/Opportunity/fields/Client_Visit_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Client_Visit_Scheduled_For__c</fullName>
    <label>Client Visit Scheduled For</label>
    <type>Date</type>
</CustomField>