force-app/main/default/objects/Opportunity/fields/Client_Visited_Office__c.field-meta.xml
<CustomField>
    <fullName>Client_Visited_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Visited Office</label>
    <type>Checkbox</type>
</CustomField>