force-app/main/default/objects/Opportunity/fields/Close_Meeting_Reminder_Call__c.field-meta.xml
<CustomField>
    <fullName>Close_Meeting_Reminder_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Close Meeting Reminder Call, Validation of Decision Makers Attendance, Trial Close</inlineHelpText>
    <label>Close Meeting Reminder Call (See Help)</label>
    <type>Checkbox</type>
</CustomField>