force-app/main/default/objects/Opportunity/fields/Combined_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Combined_Sales_Goal__c</fullName>
    <formula>CASE( MONTH( Contract_Execution_Date__c ) , 
1,14881.28, 
2,14959.24, 
3,15035.26, 
4,20109.38, 
5,20281.65, 
6,20449.6, 
7,25613.36, 
8,25873.03, 
9,26126.2, 
10,26373.05, 
11,26613.72, 
12,26848.38,0)+
CASE( MONTH( Contract_Execution_Date__c ) , 
1,33560.05, 
2,35321.05, 
3,37038.02, 
4,38712.07, 
5,40844.27, 
6,42923.16, 
7,44950.08, 
8,46926.33, 
9,48853.17, 
10,50731.84, 
11,52563.55, 
12,54349.46,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Sales Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>