force-app/main/default/objects/Opportunity/fields/Company_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Company_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Qualified</label>
    <type>Checkbox</type>
</CustomField>