force-app/main/default/objects/Opportunity/fields/Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue__c</fullName>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>