force-app/main/default/objects/Opportunity/fields/Company_Tour_Announced_If_in_house__c.field-meta.xml
<CustomField>
    <fullName>Company_Tour_Announced_If_in_house__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Tour Announced (If in house)</label>
    <type>Checkbox</type>
</CustomField>