force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There is competition with another company or doing it internally - cuts BAPT score in half</inlineHelpText>
    <label>Competition</label>
    <type>Checkbox</type>
</CustomField>