force-app/main/default/objects/Opportunity/fields/Competition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competition_Notes__c</fullName>
    <label>Competition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>