force-app/main/default/objects/Opportunity/fields/Competitor_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_URL_1__c</fullName>
    <label>Competitor URL 1</label>
    <type>Url</type>
</CustomField>