force-app/main/default/objects/Opportunity/fields/Competitor_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_URL_2__c</fullName>
    <label>Competitor URL 2</label>
    <type>Url</type>
</CustomField>