force-app/main/default/objects/Opportunity/fields/Competitor_URL_3__c.field-meta.xml
<CustomField>
    <fullName>Competitor_URL_3__c</fullName>
    <label>Competitor URL 3</label>
    <type>Url</type>
</CustomField>