force-app/main/default/objects/Opportunity/fields/Complete_Assessment_Document__c.field-meta.xml
<CustomField>
    <fullName>Complete_Assessment_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Assessment Document</label>
    <type>Checkbox</type>
</CustomField>