force-app/main/default/objects/Opportunity/fields/Conference_Room_Book_If_in_house__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room_Book_If_in_house__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conference Room Booked (If in house)</label>
    <type>Checkbox</type>
</CustomField>