force-app/main/default/objects/Opportunity/fields/Contact_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Follow_Up_Date__c</fullName>
    <formula>Contact__r.Follow_up_Call_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Follow Up Date</label>
    <type>Date</type>
</CustomField>