force-app/main/default/objects/Opportunity/fields/Contact_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity__c</fullName>
    <formula>Contact__r.Last_Activity_Datetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Activity</label>
    <type>DateTime</type>
</CustomField>