force-app/main/default/objects/Opportunity/fields/Contact_Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Call_Date__c</fullName>
    <formula>Contact__r.Last_Call_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Call Date</label>
    <type>Date</type>
</CustomField>