force-app/main/default/objects/Opportunity/fields/Contact_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Project_Name__c</fullName>
    <formula>Contact__r.Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Project Name</label>
    <type>Text</type>
</CustomField>