force-app/main/default/objects/Opportunity/fields/Contract_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Date__c</fullName>
    <inlineHelpText>Please put the contract execution date if contract has been signed and received.</inlineHelpText>
    <label>Contract Execution Date</label>
    <type>Date</type>
</CustomField>