force-app/main/default/objects/Opportunity/fields/Contract_Terms_Agreed_to__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms_Agreed_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Terms Agreed to</label>
    <type>Checkbox</type>
</CustomField>