force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13 Mo Commitment - Basic Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>13 Mo Commitment - Basic Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>(Other) Basic Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>(Other) Basic Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>13 Mo Commitment - Standard Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>13 Mo Commitment - Standard Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>(Other) Standard Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>(Other) Standard Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>45 Day Out - Basic Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>45 Day Out - Basic Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>45 Day Out - Standard Program - Appt Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>45 Day Out - Standard Program - Appt Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>Basic Program - Activity Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>Basic Program - Activity Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>Standard Program - Activity Guarantee - With Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>Standard Program - Activity Guarantee - Without Sales Tool Kit</fullName>
            </value>
            <value>
                <fullName>MS - Paid Media</fullName>
            </value>
            <value>
                <fullName>MS - SEO Content Only (13 Month Lock)</fullName>
            </value>
            <value>
                <fullName>MS - SEO Content Only (No Lock, 45 day out)</fullName>
            </value>
            <value>
                <fullName>MS - Website + SEO Content</fullName>
            </value>
            <value>
                <fullName>Video Production Services - # of Videos</fullName>
            </value>
            <value>
                <fullName>Video Production Services - Hours</fullName>
            </value>
            <value>
                <fullName>Staffing Project</fullName>
            </value>
            <value>
                <fullName>Staffing MRR</fullName>
            </value>
            <value>
                <fullName>(Other) 13 Mo Commitment - Basic Program - Appt Guarantee - With Assets</fullName>
                <isActive>false</isActive>
                <label>(Other) 13 Mo Commitment - Basic Program - Appt Guarantee - With Assets</label>
            </value>
            <value>
                <fullName>(Other) 13 Mo Commitment - Basic Program - Appt Guarantee - Without Assets</fullName>
                <isActive>false</isActive>
                <label>(Other) 13 Mo Commitment - Basic Program - Appt Guarantee - Without Assets</label>
            </value>
            <value>
                <fullName>(Other) 13 Mo Commitment - Standard Program - Appt Guarantee - With Assets</fullName>
                <isActive>false</isActive>
                <label>(Other) 13 Mo Commitment - Standard Program - Appt Guarantee - With Assets</label>
            </value>
            <value>
                <fullName>(Other) 13 Mo Commitment - Standard Program - Appt Guarantee - Without Assets</fullName>
                <isActive>false</isActive>
                <label>(Other) 13 Mo Commitment - Standard Program - Appt Guarantee - Without Assets</label>
            </value>
            <value>
                <fullName>13 Mo Commitment - Basic Program - Appt Guarantee - With Assets</fullName>
                <isActive>false</isActive>
                <label>13 Mo Commitment - Basic Program - Appt Guarantee - With Assets</label>
            </value>
            <value>
                <fullName>13 Mo Commitment - Basic Program - Appt Guarantee - Without Assets</fullName>
                <isActive>false</isActive>
                <label>13 Mo Commitment - Basic Program - Appt Guarantee - Without Assets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>