force-app/main/default/objects/Opportunity/fields/Contracting_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Negotiations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracting/Negotiations</label>
    <type>Checkbox</type>
</CustomField>