force-app/main/default/objects/Opportunity/fields/Creative_Brief_Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief_Edit_Link__c</fullName>
    <label>Creative Brief Edit Link</label>
    <type>Url</type>
</CustomField>