force-app/main/default/objects/Opportunity/fields/Creative_Brief_URL__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://survey.alchemer.com/s3/6275911/Master-Implementation-Packet-V2?oppid=&quot;+Id, &quot;Use This to Start Packet Only&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is used to start the creative brief.  Client needs to be sent the edit link.</inlineHelpText>
    <label>Creative Brief URL</label>
    <type>Text</type>
</CustomField>