force-app/main/default/objects/Opportunity/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <description>CRM&apos;s currently being used</description>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRM</valueSetName>
    </valueSet>
</CustomField>